--- a/teaching.html
+++ b/teaching.html
@@ -151,7 +151,20 @@
 	<p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Link to B9 robot project details">Link to B9 robot and other props</a></p>
       <blockquote><span lang="en">“Technology should disappear into the learning experience while making thinking visible.”</span></blockquote>
       <p></p>
-      <p> More to be added soon...</p>
+      <h3>Generative AI as a partner - sound tracks / game art</h3>
+	<p>Michael works with generative AI as a project partner; filling skills gaps that would otherwise prevent a project being completed. The use of generative AI is is to support the learner, not do all the work for the learner. As an example, for fans of the TV series "Land of the Giants", the Ballad of the Spindrift required a human created storyboard, human edited clips (under non-commercial- fair-use for educational purposes), and human written lyrics.</p>
+<p> A generative AI was used to created the music but a human user had to provide prompts and settings, and adjust the final output. </p>
+<div class="video-container">
+<iframe 
+        src="https://youtu.be/s1xazris0Pk"
+        title="Digital multimeter heat sensor"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</div>
+<p></p>
+
+
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
