--- a/teaching.html
+++ b/teaching.html
@@ -156,7 +156,7 @@
 <p> A generative AI was used to created the music but a human user had to provide prompts and settings, and adjust the final output. </p>
 <div class="video-container">
 <iframe 
-        src="https://youtu.be/s1xazris0Pk"
+        src="https://www.youtube.com/embed/s1xazris0Pk"
         title="Digital multimeter heat sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
