--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@
 <li><strong>Classroom Teaching Innovation</strong> (1999&ndash;2018): Extensive peer-reviewed conference presentations and professional journal publications in STEM education pedagogy.</li>
 <li><strong>Teacher Education Leadership</strong> (2011&ndash;2018): Major curriculum development for tertiary STEM teacher education programs at a national level.</li>
 </ol>
-<p>The progression shows consistent engagement with peer review processes, recognition through competitive fellowships and national awards, and sustained impact on teaching and assessment practice at primary, secondary, and tertiary levels across all STEM disciplines.</p>
+<p>The body of work shows consistent engagement with peer review processes, recognition through competitive fellowships and national awards, and sustained impact on teaching and assessment practice at primary, secondary, and tertiary levels across all STEM disciplines.</p>
 
 <h3>Peer-Reviewed Research Journal Publications</h3>
 <p><strong>Fenton, M.</strong>, &amp; Jarvis, B. D. W. (1991). Plasmid transfer in soil/plant environments. <em>New Zealand Microbiological Society Newsletter</em>, August.</p>
@@ -143,17 +143,27 @@
 
 <h3>Major Curriculum Development and Educational Resources</h3>
 <p><strong>Tertiary-Level Course Development (Lead Author/Designer)</strong></p>
-<p>Level 4 New Zealand Certificate in Electrical Trade &ndash; General Electrical. (2023-2025). EarnLearn.</p>
-<p>New Zealand Board for Engineering Diplomas Assessment and Moderation Online Training Package. (2016).</p>
-<p>Level 7 Graduate Diploma in Primary Mathematics Teaching. (2014&ndash;2016). The Open Polytechnic of New Zealand.</p>
-<p>Level 7 Graduate Diploma in Primary Science Teaching. (2011&ndash;2012). The Open Polytechnic of New Zealand.</p>
-<p>Level 5 Diploma in Information &amp; Computer Technology. (2005). Western Institute of Technology at Taranaki.</p>
+<ul><p><strong>Level 4</strong> New Zealand Certificate in Electrical Trade &ndash; General Electrical. (2023-2025). EarnLearn.</p></ul>
+<ul><p>New Zealand Board for Engineering Diplomas Assessment and Moderation Online Training Package. (2016).</p></ul>
+<ul><p><strong>Level 7</strong> Graduate Diploma in Primary Mathematics Teaching. (2014&ndash;2016). The Open Polytechnic of New Zealand.</p></ul>
+<ul><p><strong>Level 7</strong> Graduate Diploma in Primary Science Teaching. (2011&ndash;2012). The Open Polytechnic of New Zealand.</p></ul>
+<ul><p><strong>Level 5</strong> Diploma in Information &amp; Computer Technology. (2005). Western Institute of Technology at Taranaki.</p></ul>
 
 <p><strong>Secondary-Level Course Development (Lead Author)</strong></p>
-<p>NZQA New Zealand Certificate in Study and Employment Pathways (Levels 3 and 4, 2022). Physical Sciences III and Physical Sciences IV.</p>
-<p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</p>
-<p>Level 2 NCEA Physics Interactive CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p>
+<ul><p>NZQA New Zealand Certificate in Study and Employment Pathways (Levels 3 and 4, 2022). <strong>Physical Sciences III and Physical Sciences IV.</strong></p></ul>
+<ul><p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). <strong>Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</strong></p></ul>
+<ul><p><strong>Level 2 NCEA Physics Interactive</strong> CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p></ul>
 
+<h3>Professional Memberships and Leadership Roles</h3>
+<p>Member, <strong>Royal Society of New Zealand</strong> (MRSNZ); Current</p>
+<p><strong>Director,</strong> Focus Consultancy; 2016–Present</p>
+<ul>
+<p>Education consultancy providing leadership, assessment design and moderation services to education providers, including curriculum design, quality assurance processes, and professional development for science and mathematics teachers throughout New Zealand.</p>
+</ul>
+<p><strong>Royal Society of New Zealand Science Teaching Leadership Programme</strong> – Workshop Facilitator / Designer/ Teacher mentor</p>
+<ul>
+<p>Mentor to teachers and principals implementing curriculum and assessment change as part of leadership awards.</p>
+</ul>
 <h3>Awards and Fellowships</h3>
 <p><strong>2017</strong> &ndash; Kiwibank New Zealander of the Year &ndash; Local Hero Medal (services to science education)</p>
 <p><strong>2015</strong> &ndash; New Zealand Prime Minister's Education Excellence Award finalist (Excellence in Leading)</p>
