--- a/publications.html
+++ b/publications.html
@@ -153,12 +153,15 @@
 <ul><p>NZQA New Zealand Certificate in Study and Employment Pathways (Levels 3 and 4, 2022). <strong>Physical Sciences III and Physical Sciences IV.</strong></p></ul>
 <ul><p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). <strong>Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</strong></p></ul>
 <ul><p><strong>Level 2 NCEA Physics Interactive</strong> CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p></ul>
-
 <h3>Professional Memberships and Leadership Roles</h3>
 <p>Member, <strong>Royal Society of New Zealand</strong> (MRSNZ); Current</p>
 <p><strong>Director,</strong> Focus Consultancy; 2016–Present</p>
 <ul>
 <p>Education consultancy providing leadership, assessment design and moderation services to education providers, including curriculum design, quality assurance processes, and professional development for science and mathematics teachers throughout New Zealand.</p>
+</ul>
+<p><strong>Hutt Valley Primary Science Education Network </strong>STEM Education expert and Workshop Facilitator, Programme Leader, Open Polytechnic</p>
+<ul>
+<p>Launched by the Minister of Education, Hon. Hekia Perata. The PSEN includes local schools, industries and science organisations (e.g. GNS), organising annual events and providing expert-led workshops.</p>
 </ul>
 <p><strong>Royal Society of New Zealand Science Teaching Leadership Programme</strong> – Workshop Facilitator / Designer/ Teacher mentor</p>
 <ul>
