--- a/publications.html
+++ b/publications.html
@@ -154,12 +154,15 @@
 <ul><p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). <strong>Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</strong></p></ul>
 <ul><p><strong>Level 2 NCEA Physics Interactive</strong> CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p></ul>
 <h3>Professional Memberships and Leadership Roles</h3>
-<p>Member, <strong>Royal Society of New Zealand</strong> (MRSNZ); Current</p>
+<p><strong>Royal Society of New Zealand</strong> Professional member(MRSNZ); Current</p>
+ul>
+<p>Competence to undertake independent research practice.</p>
+</ul>
 <p><strong>Director,</strong> Focus Consultancy; 2016–Present</p>
 <ul>
 <p>Education consultancy providing leadership, assessment design and moderation services to education providers, including curriculum design, quality assurance processes, and professional development for science and mathematics teachers throughout New Zealand.</p>
 </ul>
-<p><strong>Hutt Valley Primary Science Education Network </strong>STEM Education expert and Workshop Facilitator, Programme Leader, Open Polytechnic</p>
+<p><strong>Hutt Valley Primary Science Education Network </strong>(2012-2018) STEM Education expert and Workshop Facilitator, Programme Leader, Open Polytechnic</p>
 <ul>
 <p>Launched by the Minister of Education, Hon. Hekia Perata. The PSEN includes local schools, industries and science organisations (e.g. GNS), organising annual events and providing expert-led workshops.</p>
 </ul>
