--- a/publications.html
+++ b/publications.html
@@ -154,13 +154,17 @@
 <ul><p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). <strong>Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</strong></p></ul>
 <ul><p><strong>Level 2 NCEA Physics Interactive</strong> CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p></ul>
 <h3>Professional Memberships and Leadership Roles</h3>
-<p><strong>Royal Society of New Zealand</strong> Professional member(MRSNZ); Current</p>
+<p><strong>Royal Society of New Zealand</strong> Professional member (MRSNZ); Current</p>
 <ul>
 <p>Competence to undertake independent research practice.</p>
 </ul>
 <p><strong>Director,</strong> Focus Consultancy; 2016–Present</p>
 <ul>
 <p>Education consultancy providing leadership, assessment design and moderation services to education providers, including curriculum design, quality assurance processes, and professional development for science and mathematics teachers throughout New Zealand.</p>
+</ul>
+<p><strong>Programme Leader (Science & Mathematics Teaching), Lecturer, Writer</strong> Open Polytechnic; 2011–2018</p>
+<ul>
+<p>'Doing science to teach science" (and sister courses in mathematics). Practical hands-on pedagogy and resources to raise teacher confidence and knowledge of science and mathematics. Mentored and supervised in-service classroom teachers and principals to design, carry out and evaluate practice-led action research projects that have improved children’s’ learning outcomes throughout New Zealand. Former teacher students have secured leadership roles, Fellowships and a Prime Minister's Science Teacher prize.</p>
 </ul>
 <p><strong>Hutt Valley Primary Science Education Network </strong>(2012-2018) STEM Education expert and Workshop Facilitator, Programme Leader, Open Polytechnic</p>
 <ul>
@@ -169,6 +173,10 @@
 <p><strong>Royal Society of New Zealand Science Teaching Leadership Programme</strong> – Workshop Facilitator / Designer/ Teacher mentor</p>
 <ul>
 <p>Mentor to teachers and principals implementing curriculum and assessment change as part of leadership awards.</p>
+</ul>
+<p><strong>Founder/Director,</strong> Nexus Research Group; 1997-2004, voluntary.</p>
+<ul>
+<p>Established the Nexus Research Group, patron Dr Sir William Pickering, former head of JPL. New Zealand’s (and likely unique in the southern hemisphere) only school-based research laboratory. School students worked as technicians and researchers, with access to scientists world-wide, sharing original discoveries at conferences and on the NRG website.</p>
 </ul>
 <h3>Awards and Fellowships</h3>
 <p><strong>2017</strong> &ndash; Kiwibank New Zealander of the Year &ndash; Local Hero Medal (services to science education)</p>
