--- a/cv.html
+++ b/cv.html
@@ -89,11 +89,19 @@
         <li>M.Sc. </li>
         <li>PG Dip.Tchg.</li>
       </ul>
+      <h3>Research interests</h3>
+      <ul class="tight">
+        <li>Constraint-driven design for equitable STEM access </li>
+        <li>Educational data acquisition systems and sensor instrumentation</li>
+        <li>Epistemic functions of hands-on measurement in post-AI era</li>
+        <li>Practice-embedded research methodology</li>
+        <li>Teacher professional learning and systemic barrier analysis</li>
+      </ul>
       <h3>Professional Experience</h3>
       <ul class="tight">
         <li><strong>Research</strong>:
           <ul>
-            <li>Competence to undertake independent research practice. <a href="https://www.royalsociety.org.nz/" target="_blank">Royal Society.</a></li>
+            <li>Professional member, Royal Society of New Zealand. Competence to undertake independent research practice. <a href="https://www.royalsociety.org.nz/" target="_blank">Royal Society.</a></li>
             <li>Director - <a href="http://Focus-consultancy.co.nz" target="_blank">Focus Consultancy</a>.</li>
             <li>Founder / Director - <a href="files/michael-fenton-nexus-research-group.pdf" target="_blank">Nexus Research Group</a>.</li>
             <li>Industrial microbiology and chemistry - Tegel Foods.</li>
