--- a/publications.html
+++ b/publications.html
@@ -104,8 +104,8 @@
 <p>Jarvis, B. D. W., &amp; Tighe, S. W. (1994). Rapid identification of <em>Rhizobium</em> species based on cellular fatty acid analysis. <em>Plant and Soil</em>, <em>161</em>(2), 289&ndash;298.</p>
 
 <h3>Peer-Reviewed Government / Council Research Reports</h3>
-<p><strong>Fenton, M.</strong> (2008). <em>Authentic learning using mobile sensor technology with reflections on the state of science education in New Zealand</em> [E-Learning Fellowship research report]. CORE Education Ltd. Ministry of Education. http://nexusresearchgroup.com/downloads/Michael-Fenton-eLearning-Report.pdf</p>
-<p><strong>Fenton, M.</strong> (2008). Pedagogy and student involvement. In <em>Energy conservation and renewable energy generation (EnviroPower) pilot &ndash; Completion report</em>. Venture Taranaki Trust. http://nexusresearchgroup.com/technical-data/enviropower-2.htm</p>
+<p><strong>Fenton, M.</strong> (2008). <em>Authentic learning using mobile sensor technology with reflections on the state of science education in New Zealand</em> [E-Learning Fellowship research report]. CORE Education Ltd. Ministry of Education. <a href="files/michael-fenton-elearning-report.pdf" target="_blank" aria-label="Link to report, RIGEL project and Casio-picaxe data logger">Link to report, RIGEL project and Casio-picaxe data logger</a></p>
+<p><strong>Fenton, M.</strong> (2008). Pedagogy and student involvement. In <em>Energy conservation and renewable energy generation (EnviroPower) pilot &ndash; Completion report</em>. Venture Taranaki Trust. <a href="files/michael-fenton-enviropower-report.pdf" target="_blank" aria-label="Link to report.">Link to report.</a></p>
 
 <h3>Peer-Reviewed Conference Proceedings (Full Papers)</h3>
 <p><strong>Fenton, M.</strong>, &amp; Fenton, C. (2016). Teachers' experiences of professional development in science and mathematics by distance learning. In <em>Proceedings of the ULearn 2016 Conference</em>. Rotorua, New Zealand.</p>
