--- a/publications.html
+++ b/publications.html
@@ -182,7 +182,7 @@
 <p><strong>2017</strong> &ndash; Kiwibank New Zealander of the Year &ndash; Local Hero Medal (services to science education)</p>
 <p><strong>2015</strong> &ndash; New Zealand Prime Minister's Education Excellence Award finalist (Excellence in Leading)</p>
 <p><strong>2014</strong> &ndash; DEANZ Excellence Award, Distance Education Association of New Zealand (now FLANZ)</p>
-<p><strong>2008</strong> &ndash; New Zealand Ministry of Education E-Learning Fellow</p>
+<p><strong>2008</strong> &ndash; New Zealand Ministry of Education E-Learning Fellow: <a href="https://www.beehive.govt.nz/release/e-learning-fellowships-teachers-announced" target="_blank" aria-label="E-learning Fellowship launch">E-learning Fellowship launch</a>   |   <a href="https://www.beehive.govt.nz/release/innovative-teachers-explore-new-technology-horizons" target="_blank" aria-label="2007 Press release">2007 Press release</a></p>
 <p><strong>2008</strong> &ndash; Microsoft New Zealand <em>Partners in Learning</em> Innovative Teacher</p>
 <p><strong>1991</strong> &ndash; New Zealand Microbiology Society Postgraduate Prize</p>
 
