--- a/projects/casio-calculator-data-logger-hack.html
+++ b/projects/casio-calculator-data-logger-hack.html
@@ -157,10 +157,10 @@
 <img src="../assets/img/michael-fenton-casio-receive-pause.png" alt="Comparison of Michael's hack." />
 <br>
 <h3 id="downloads">'How-to' downloads and code</h3>
-	<blockquote><span lang="en"><strong>Downloads available December 2025 - check back soon!</strong> [ Casio FX-9750 code, Picaxe BASIC code, ESP8266 / ESP32 C++ code ]</span></blockquote>
+	<blockquote><span lang="en"><strong>Downloads available 2026 - check back soon!</strong> [ Casio FX-9750 code, Picaxe BASIC code, ESP8266 / ESP32 C++ code ]</span></blockquote>
 <img src="../assets/img/picaxe-code.jpg" alt="'Picaxe basic code example'; Picaxe BASIC code will be provided" />
 <br>
-	<blockquote><span lang="en"><strong>Downloads available December 2025 - check back soon!</strong> [ Wiring diagram, RECEIVE() and SEND() protocols, code explanations and experiment lab manual ]</span></blockquote>
+	<blockquote><span lang="en"><strong>Downloads available 2026 - check back soon!</strong> [ Wiring diagram, RECEIVE() and SEND() protocols, code explanations and experiment lab manual ]</span></blockquote>
 <img src="../assets/img/casio-calculator-picaxe-esp32-microbit-manual.jpg" alt="'Michael Fenton's experiment manual'; Casio calculator data logger manual." />
 <br>
 	<p><a href="casio-calculator-picaxe-data-logger.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
