--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -188,6 +188,15 @@
         allowfullscreen>
 </iframe>
 </div>
+	<p>Another remake coming in 2026! The classic Apple II game Aztec, now including a soundtrack as you race to retrieve the lost idol! But beware the warning or face your doom</p>
+<div class="video-container">
+<iframe 
+        src="https://www.youtube.com/embed/UJegjTEAs5A"
+        title="Aztec remake - soundtrack - Explorers Warning - part 3"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</div>
 	<p>Michael has documented many of his projects in YouTube videos. Here the low cost game pad controller is used with Game Maker to create a 3D flight simulator. A new use for a discarded exercise bike!</p>
 <div class="video-container">
 <iframe 
